Enable remote database

--- a/3.1/Dockerfile
+++ b/3.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM ubuntu:cosmic
 
 MAINTAINER dorukozturk <dorukozturk@kitware.com>
 
@@ -12,7 +12,7 @@ RUN apt-get -y update -qq && \
     apt-get install -y build-essential cmake g++ libboost-dev libboost-system-dev \
     libboost-filesystem-dev libexpat1-dev zlib1g-dev libxml2-dev\
     libbz2-dev libpq-dev libgeos-dev libgeos++-dev libproj-dev \
-    postgresql-server-dev-9.5 postgresql-9.5-postgis-2.2 postgresql-contrib-9.5 \
+    postgresql-server-dev-10 postgresql-10-postgis-2.4 postgresql-contrib \
     apache2 php php-pgsql libapache2-mod-php php-pear php-db \
     php-intl git curl sudo \
     python-pip libboost-python-dev \
@@ -23,9 +23,6 @@ RUN apt-get -y update -qq && \
 
 WORKDIR /app
 
-# Configure postgres
-RUN echo "host all  all    0.0.0.0/0  trust" >> /etc/postgresql/9.5/main/pg_hba.conf && \
-    echo "listen_addresses='*'" >> /etc/postgresql/9.5/main/postgresql.conf
 
 # Nominatim install
 ENV NOMINATIM_VERSION v3.1.0
@@ -34,21 +31,19 @@ RUN cd ./src && git checkout tags/$NOMINATIM_VERSION && git submodule update --r
     mkdir build && cd build && cmake .. && make
 
 # Osmium install to run continuous updates
-RUN pip install osmium
+#RUN pip install osmium
 
 # Apache configure
-COPY local.php /app/src/build/settings/local.php
+COPY local.php /app/local.php
 COPY nominatim.conf /etc/apache2/sites-enabled/000-default.conf
 
-# Load initial data
-RUN curl http://www.nominatim.org/data/country_grid.sql.gz > /app/src/data/country_osm_grid.sql.gz
 
-EXPOSE 5432
+#EXPOSE 5432
 EXPOSE 8080
 
 COPY start.sh /app/start.sh
 COPY startapache.sh /app/startapache.sh
-COPY startpostgres.sh /app/startpostgres.sh
 COPY init.sh /app/init.sh
 
+CMD /app/startapache.sh
 
